# axum_book_code

./: README.md
ch02/from_ref/: Cargo.toml
ch02/from_ref/src/: main.rs
ch02/multipart/: Cargo.toml
ch02/multipart/src/: main.rs
ch02/proxy_server/: Cargo.toml
ch02/proxy_server/src/: main.rs
ch02/rust_project/axum-project/: Cargo.toml
ch02/rust_project/axum-project/src/: main.rs
ch03/module/: .env  Cargo.toml
ch03/module/src/: main.rs
ch03/module/src/api/: category.rs  product.rs  users.rs
ch03/module/src/db/: category.rs  init.rs  mod.rs  model.rs  product.rs  user.rs
ch03/sea-orm-example/: .env  Cargo.toml
ch03/sea-orm-example/migration/src/: lib.rs  m20260410_152648_create_table.rs
ch03/sea-orm-example/src/: lib.rs  main.rs
ch03/sea-orm-example/src/entities/: category.rs  mod.rs  prelude.rs  product.rs  users.rs
docker/: docker-compose.yml
go/postgres/: init_db.go
rust_project/: .gitignore
rust_project/axum-example/: Cargo.toml  README.md
rust_project/axum-project/: .env  Cargo.toml
rust_project/axum-project/migration/src/: m20250715_232456_create_table.rs
rust_project/axum-project/src/: lib.rs  main.rs
rust_project/axum-project/src/api/: auth.rs  product.rs  users.rs
rust_project/axum-project/src/db/: init.rs
rust_project/axum-project/src/entities/: category.rs  prelude.rs  users.rs
rust_project/axum-project/src/utils/: app_error.rs  hash.rs  jwt.rs
rust_project/broadcast/: Cargo.toml
rust_project/handler_debug/: Cargo.toml
rust_project/handler_debug/src/: main.rs
rust_project/proxy/: Cargo.toml
rust_project/proxy/src/: main.rs
rust_project/sea_orm_db/: Cargo.toml
rust_project/sea_orm_db/migration/src/: lib.rs
rust_project/sea_orm_db/sql/: 01_insert_test_user.sql
rust_project/sea_orm_db/src/: lib.rs
rust_project/sea_orm_db/src/api/: category.rs  users.rs
rust_project/sea_orm_db/src/entities/: mod.rs  product.rs
rust_project/state_extention/: Cargo.toml
rust_project/state_extention/src/: main.rs
rust_project/websocket/: Cargo.toml
rust_project/websocket/src/: main.rs
