[package]
name = "proxy_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
reqwest = { version = "0.13", features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
