[package]
name = "module"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "http2"] }
dotenvy = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "postgres"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
