[package]
name = "sea-orm-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "http2"] }
dotenvy = "0.15"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
