[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
