[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bcrypt = "0.17"
chrono = "0.4"
dotenvy = "0.15"
jsonwebtoken = "9.3"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46", features = [
    "rt-multi-thread",
    "parking_lot",
    "macros",
] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "compression-full",
    "timeout",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
