[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["rt-multi-thread", "parking_lot"] }
